@@ -1,3 +1,8 @@
+2013-07-15  Sergio Martin <sergio.martin@artica.es>
+
+	* util/plugin/snmp_remote.pl: Add SNMP remote plugin to the
+	default plugins on Pandora FMS server
+
 2013-07-10  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Added support to filter 10 binding vars.
